Fixed more client

--- a/Grading-Administration/Grading-Administration-Server/Grading-Administration-Server.csproj
+++ b/Grading-Administration/Grading-Administration-Server/Grading-Administration-Server.csproj
@@ -7,12 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Communication\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
+
+  <Import Project="..\Grading-Administration-Shared\Grading-Administration-Shared.projitems" Label="Shared" />
 
 </Project>
