--- a/Grading-Administration/Gradings-Administration-client/Gradings-Admin-client.csproj
+++ b/Grading-Administration/Gradings-Administration-client/Gradings-Admin-client.csproj
@@ -7,4 +7,10 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <Import Project="..\Grading-Administration-Shared\Grading-Administration-Shared.projitems" Label="Shared" />
+
+  <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+  </ItemGroup>
+
 </Project>
