--- a/Grading-Administration/Gradings-Administration-client/Gradings-Admin-client.csproj
+++ b/Grading-Administration/Gradings-Administration-client/Gradings-Admin-client.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Grading-Administration-Server\Grading-Administration-Server.csproj" />
+  </ItemGroup>
+
 </Project>
