--- a/Grading-Administration/Grading-Administration-Server/Grading-Administration-Server.csproj
+++ b/Grading-Administration/Grading-Administration-Server/Grading-Administration-Server.csproj
@@ -11,6 +11,10 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="EntityFramework\Migrations\" />
+  </ItemGroup>
+
   <Import Project="..\Grading-Administration-Shared\Grading-Administration-Shared.projitems" Label="Shared" />
 
 </Project>
