--- a/Grading-Administration/Grading-Administration-Server/Grading-Administration-Server.csproj
+++ b/Grading-Administration/Grading-Administration-Server/Grading-Administration-Server.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Castle.Windsor" Version="5.1.1" />
     <PackageReference Include="EntityFramework" Version="6.4.4" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
