--- a/Grading-Administration/Gradings-Administration-client/Gradings-Admin-client.csproj
+++ b/Grading-Administration/Gradings-Administration-client/Gradings-Admin-client.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
+    <PackageReference Include="Syncfusion.Pdf.Wpf" Version="19.3.0.47" />
   </ItemGroup>
 
   <ItemGroup>
