Sorting module list for students on enddate

--- a/Grading-Administration/Gradings-Administration-client/Gradings-Admin-client.csproj
+++ b/Grading-Administration/Gradings-Administration-client/Gradings-Admin-client.csproj
@@ -16,6 +16,10 @@
     <ProjectReference Include="..\Grading-Administration-Server\Grading-Administration-Server.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="FileIO\" />
+  </ItemGroup>
+
   <Import Project="..\Grading-Administration-Shared\Grading-Administration-Shared.projitems" Label="Shared" />
 
 </Project>
